# ifc

./: Cargo.toml  readme.md
doc/: 00-dependencies.md  05-design-decisions.md  10-design.md
ifc-macros/: Cargo.toml
ifc-macros/src/: error.rs  lib.rs  macro_parser.rs  scope.rs  semi_block.rs
ifc-macros/src/attributes/: mod.rs  property.rs
ifc-macros/src/ctxt/: attributes.rs  expr.rs  local.rs  mod.rs
ifc-macros/test/: assign_declassify_to_low.rs  assign_declassify_to_none.rs  assign_eq_declassify_to_low.rs  assign_eq_declassify_to_none.rs  assign_high_to_high.rs  assign_high_to_low.rs  assign_high_to_low.stderr  assign_high_to_untyped.rs  assign_high_to_untyped.stderr  assign_low_to_high.rs  assign_low_to_low.rs  assign_low_to_untyped.rs  assign_untyped_to_high.rs  assign_untyped_to_low.rs  assign_untyped_to_untyped.rs  assignop_high_to_high.rs  assignop_high_to_low.rs  assignop_high_to_low.stderr  assignop_high_to_untyped.rs  assignop_high_to_untyped.stderr  assignop_low_to_high.rs  assignop_low_to_low.rs  assignop_low_to_untyped.rs  assignop_untyped_to_high.rs  assignop_untyped_to_low.rs  assignop_untyped_to_untyped.rs  binary_high_high.rs  binary_high_low.rs  binary_high_none.rs  binary_low_high.rs  binary_low_low.rs  binary_low_none.rs  binary_none_high.rs  binary_none_low.rs  binary_none_none.rs  block_access_upper_scope.rs  block_access_upper_scope.stderr  block_full_scope_test.rs  build.rs  correct_error_span_let.rs  (+59 more)
src/: arithmetic.rs  highvar.rs  lib.rs  lowvar.rs  unsafelib.rs
