[package]
name = "ifc-macros"
version = "0.1.0"
authors = ["Ahmed Abdelraoof <ahmedsoliman@oddcoder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/build.rs"

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
quote = "1.0"
proc-macro2={version = "1.0", features = ["span-locations"]}
proc-macro-error="1.0"


[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
ifc = {path ="../"}
lazy_static = "1.4.0"